<resources>
    <string name="app_name">My Signals App</string>
    <string name="bluetooth_not_supported">bluetooth function not supported</string>
    <string name="ble_not_supported">bluetooth function supported</string>
    <string name="home">Home</string>
    <string name="sensors">Sensors</string>
    <string name="account">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userdata_fragment">User Data Fragment</string>
    <string name="home_fragment">BLUETOOTH DEVICES</string>
    <string name="account_fragment">Account Fragment</string>
    <string name="bluetooth_on">Start Scan</string>
    <string name="bluetooth_off">Stop Scan</string>
    <string name="user_data">User Data</string>
    <string name="settings">Settings</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">username</string>
    <string name="userdataTitle">MEMBERS LIST</string>
    <string name="show_member">Show members</string>
    <string name="spinner_title">Select Member</string>
    <string name="prompt_confirm_password">Confirm password</string>
</resources>