<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".view.HomeFragment">
   <data/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                android:id="@+id/home_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_fragment"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="20sp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:layout_marginStart="16sp"
                android:layout_marginEnd="16sp"
                android:padding="10sp"
                android:background="@color/material_dynamic_neutral90"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/list_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bluetooth_on"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:contentDescription="@string/bluetooth_off"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
                android:id="@+id/card_view_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="12dp"
                android:visibility="gone">

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/device_list"
                        android:divider="@null"
                        android:layout_width="match_parent"
                        android:background="@color/white"
                        android:layout_height="match_parent">
                </androidx.recyclerview.widget.RecyclerView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</layout>